--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- we import arjs version without NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
-    <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'></a-scene>
+    <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
       <a-marker preset="barcode" value="4">
         <a-entity
           position="0 0 0"
@@ -13,6 +13,6 @@
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
-
+    </a-scene>
   </body>
 </html>
