--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; LabelingMode: AR_LABELING_WHITE_REGION;'>
-      <a-marker type="barcode" value="6">
-        <a-entity
-          position="0 0 0"
-          scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
-      </a-marker>
-      <a-entity camera></a-entity>
+<!doctype html>
+<script
+    src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="../../build/aframe-ar.js"></script>
+
+<body style='margin : 0px; overflow: hidden;'>
+    <div style='position: fixed; top: 10px; text-align: center; z-index: 1; width: 100%; background: gray;'>
+       White region marker (markers with white borders) example, use <a href="assets/white_000.png">this inverted marker.</a>
+    </div>
+    <a-scene embedded
+        arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; labelingMode: white_region;' renderer='precision: medium;'>
+
+        <a-marker type='barcode' value='0'>
+            <a-sphere position="0 0.5 0" radius="1" color="red" />
+        </a-marker>
+
+        <a-entity camera></a-entity>
+
     </a-scene>
-  </body>
-</html>
+</body>
