--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-scene embedded
         arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; labelingMode: white_region;' renderer='precision: medium;'>
 
-        <a-marker type='barcode' value='0'>
+        <a-marker preset='hiro' value='0'>
             <a-sphere position="0 0.5 0" radius="1" color="red" />
         </a-marker>
 
