--- a/index.html
+++ b/index.html
@@ -9,27 +9,25 @@
 
    <body style='margin : 0px; overflow: hidden;'>
        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-       <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3_hamming_6_3; labelingMode: white_region;' renderer='precision: medium;'>
-         <div>
-           <h1>parity 4</h1>
-         </div>
-       <a-assets>
-           <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
-       </a-assets>
+       <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; labelingMode: white_region;' renderer='precision: medium;'>
 
-       <a-marker type='barcode' value='4'>
-           <a-box position='0 0.5 0' color="yellow"></a-box>
-       </a-marker>
+         <a-assets>
+             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
+         </a-assets>
 
-       <a-marker id="animated-marker" preset='hiro'>
-           <a-entity
-               gltf-model="#animated-asset"
-               scale="1">
-           </a-entity>
-       </a-marker>
+         <a-marker type='barcode' value='4'>
+             <a-box position='0 0.5 0' color="yellow"></a-box>
+         </a-marker>
 
-       <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
-       <a-entity camera></a-entity>
+         <a-marker id="animated-marker" preset='hiro'>
+             <a-entity
+                 gltf-model="#animated-asset"
+                 scale="1">
+             </a-entity>
+         </a-marker>
+
+         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
+         <a-entity camera></a-entity>
        </a-scene>
    </body>
 </html>
