--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
          </a-assets>
 
          <a-marker type='barcode' value='4'>
-           gltf-model="#animated-asset"
-           scale="1">
+           <a-entity
+               gltf-model="#animated-asset"
+               scale="1">
+           </a-entity>
+         </a-marker>
+
+         <a-marker id="animated-marker" preset='hiro'>
+
          </a-marker>
 
          <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
