--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
          </a-assets>
 
          <a-marker type='barcode' value='4'>
-           <a-entity
-               gltf-model="#animated-asset"
-               scale="1">
-           </a-entity>
+             <a-box position='0 0.5 0' color="yellow"></a-box>
          </a-marker>
 
          <a-marker id="animated-marker" preset='hiro'>
-
+             <a-entity
+                 gltf-model="#animated-asset"
+                 scale="1">
+             </a-entity>
          </a-marker>
 
          <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
