--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; labelingMode: white_region;' renderer='precision: medium;'>
 
          <a-assets>
-             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
+             <a-asset-item id="animated-asset" src="D:\Documents\GitHub\ARgit\model"></a-asset-item>
          </a-assets>
 
          <a-marker type='barcode' value='4'>
-             <a-box position='0 0.5 0' color="yellow"></a-box>
+           <a-entity
+               gltf-model="#animated-asset"
+               scale="1">
+           </a-entity>
          </a-marker>
 
          <a-marker id="animated-marker" preset='hiro'>
-             <a-entity
-                 gltf-model="#animated-asset"
-                 scale="1">
-             </a-entity>
+
          </a-marker>
 
          <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
