--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; labelingMode: white_region;' renderer='precision: medium;'>
 
          <a-assets>
-             <a-asset-item id="animated-asset" src="D:\Documents\GitHub\ARgit\model"></a-asset-item>
+             <a-asset-item id="animated-asset" src="D:\Documents\GitHub\ARgit\model\scene.gltf"></a-asset-item>
          </a-assets>
 
          <a-marker type='barcode' value='4'>
